Fix layout issues with Hire in Sidebar

--- a/sass/oscailte/components/_hire.scss
+++ b/sass/oscailte/components/_hire.scss
@@ -3,10 +3,6 @@
     @media only screen and (max-width: $breakpoint--xsmall-end){
         text-align: center;
     }
-
-    .sidebar & {
-        margin: 0 0.5rem;
-    }
 }
 
 .hire--available {
