--- a/sass/oscailte/layout/_sidebar.scss
+++ b/sass/oscailte/layout/_sidebar.scss
@@ -1,8 +1,10 @@
 .sidebar {
-    padding-top: 1rem;
 
     .row {
         width: 100%;
+        > section {
+            padding-top: 1rem;
+        }
     }
 
     section {
@@ -16,7 +18,7 @@
             border-bottom: 1px solid $color--primary;
             color: $typography--color;
             font-size: 1.25rem;
-            margin: 1em 0 0.5em;
+            margin: 0 0 0.5em;
             padding-bottom: 5px;
 
             .btn {
